force-app/main/default/objects/Billing_Comment__c/Billing_Comment__c.object-meta.xml
<CustomObject>
    <label>Billing Comment</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Billing Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>