force-app/main/default/objects/Billing_Comment__c/fields/Billing_Contact_Group__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Group__c</fullName>
    <label>Billing Contact/Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>