force-app/main/default/objects/Billing_Comment__c/fields/Billing_Related_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Related_Phone__c</fullName>
    <label>Billing Related Phone</label>
    <type>Phone</type>
</CustomField>