force-app/main/default/objects/Billing_Comment__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Billing Comments</relationshipLabel>
    <relationshipName>Billing_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>