force-app/main/default/objects/Billing_Comment__c/fields/Use_Contact_s_Phone_Information__c.field-meta.xml
<CustomField>
    <fullName>Use_Contact_s_Phone_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Contact&apos;s Phone Information</label>
    <type>Checkbox</type>
</CustomField>