force-app/main/default/objects/Billing_Comment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,&quot;View&quot;,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>